--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,8 @@
         <script src="https://cdn.auth0.com/js/lock-9.0.min.js"></script>
 
         <script src="//use.typekit.net/iws6ohy.js"></script>
-        <script>try{Typekit.load();}catch(e){}</script>
-
+<!--         <script>try{Typekit.load();}catch(e){}</script>
+ -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- font awesome from BootstrapCDN -->
@@ -27,9 +27,13 @@
             <div class="login-page clearfix" id="login-page">
             </div>
         </div>
-        <script src="app/js/loggedIn.js"> </script>
+        <script src="app/bundle.js"> </script>
+<!--         <script src="app/js/loggedIn.js"> </script>
         <script src="app/js/home.js"> </script>
         <script src="app/js/app.js"> </script>
-        <script src="app/js/boot.js"> </script>
+        <script type="text/javascript" src='app/js/homeContent.js'></script>
+        <script type="text/javascript" src='app/js/navbar.js'></script>
+        <script type="text/javascript" src='app/js/landingSections.js'></script>
+        <script src="app/js/boot.js"> </script> -->
     </body>
 </html>
