(style) Incorporate styles Add initial landing style Add nav/footer styles Add fonts

--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,12 @@
 
         <!-- font awesome from BootstrapCDN -->
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-
+        <!-- fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Salsa" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet" type="text/css">
         <!-- React libs -->
         <!-- The core React library -->
         <script src="http://fb.me/react-0.14.7.js"></script>
@@ -23,9 +27,11 @@
         <link href="app.css" rel="stylesheet">
     </head>
     <body class="home">
-        <div class="container">
+        <!-- <div class="clearfix">
             <div class="login-page clearfix" id="login-page">
             </div>
+        </div> -->
+        <div id='App'>            
         </div>
         <script src="app/bundle.js"> </script>
 <!--         <script src="app/js/loggedIn.js"> </script>
