(refactor) Style Merged css style Removed unused index target div

--- a/client/index.html
+++ b/client/index.html
@@ -26,11 +26,7 @@
         <script src="auth0-variables.js"> </script>
         <link href="app.css" rel="stylesheet">
     </head>
-    <body class="home">
-        <!-- <div class="clearfix">
-            <div class="login-page clearfix" id="login-page">
-            </div>
-        </div> -->
+    <body>        
         <div id='App'>            
         </div>
         <script src="app/bundle.js"> </script>
