--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="https://cdn.auth0.com/js/lock-9.0.min.js"></script>
-
         <script src="//use.typekit.net/iws6ohy.js"></script>
 <!--         <script>try{Typekit.load();}catch(e){}</script>
  -->
@@ -22,6 +21,7 @@
         <!-- The core React library -->
         <script src="http://fb.me/react-0.14.7.js"></script>
         <script src="https://fb.me/react-dom-0.14.7.js"></script>
+        <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 
         <script src="auth0-variables.js"> </script>
         <link href="app.css" rel="stylesheet">
