(feature) Add styling for keyboard

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
 
         <script src="auth0-variables.js"> </script>
         <link href="app.css" rel="stylesheet">
+        <link href="keyboard.css" rel="stylesheet">
     </head>
     <body>
         <div id='App'>
