--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
         <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 
         <script src="auth0-variables.js"> </script>
+        <link href="sweetalert.css" rel="stylesheet">
         <link href="app.css" rel="stylesheet">
         <link href="keyboard.css" rel="stylesheet">
     </head>
@@ -31,12 +32,5 @@
         <div id='App'>
         </div>
         <script src="app/bundle.js"> </script>
-<!--         <script src="app/js/loggedIn.js"> </script>
-        <script src="app/js/home.js"> </script>
-        <script src="app/js/app.js"> </script>
-        <script type="text/javascript" src='app/js/homeContent.js'></script>
-        <script type="text/javascript" src='app/js/navbar.js'></script>
-        <script type="text/javascript" src='app/js/landingSections.js'></script>
-        <script src="app/js/boot.js"> </script> -->
     </body>
 </html>
